<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_backup"
          android:icon="@drawable/ic_action_save"
          android:title="@string/menu_backup"
          android:showAsAction="always|withText" />

		<item
		    android:id="@+id/menu_refresh"
			android:title="@string/menu_refresh"
			android:icon="@drawable/ic_action_refresh"
			android:showAsAction="ifRoom"
			/>
		<item
		    android:id="@+id/menu_about"
			android:title="@string/menu_about"
			android:icon="@drawable/ic_action_about"
			android:showAsAction="ifRoom"
			/>
    
		    <item
		    android:id="@+id/menu_settings"
		    android:icon="@drawable/ic_action_settings"
			android:title="@string/menu_wifi_settings"
			android:showAsAction="ifRoom"
			/>
		
</menu>