<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_above="@+id/about_button_bar"
    android:layout_alignParentTop="true"
    android:padding="10dip">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

<TextView
android:id="@+id/about_version"
android:gravity="center_horizontal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/about_version"
android:paddingBottom="10dp" />
    
<TextView
android:id="@+id/about_content"
android:gravity="center_horizontal"
android:autoLink="web"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/about_text" />
</LinearLayout>
</ScrollView>

<LinearLayout
android:id="@+id/about_button_bar"
style="@android:style/ButtonBar"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_alignParentBottom="true"
android:orientation="horizontal">

    <Button
        android:id="@+id/about_back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:text="@string/back_button" />
</LinearLayout>
</RelativeLayout>